src/br/jabuti/gvf/DotParser.java
/* Generated By:JavaCC: Do not edit this line. DotParser.java */
package br.jabuti.gvf;

import java.util.*;
import java.io.*;


public class DotParser implements DotParserConstants {
private Vector vnode, vlink;
private int graphHeight = 0;

    public DotParser(Vector v, Vector v2, InputStream is)
    {
        this(is);
        vnode = v;
        vlink = v2;
    }

    private GVFNode findLabel(String x)
    {
        if ( vnode == null )
                return null;

        GVFNode ret = null;
        for (int i = 0; i < vnode.size(); i++)
        {
                ret = (GVFNode) vnode.get(i);
                if ( x.equals(ret.getSource()) )
                        return ret;
        }
        return ret;
    }

    private GVFLink findLink(String orig, String dest)
    {
        if ( vlink == null )
                return null;

        GVFLink ret = null;
        for (int i = 0; i < vlink.size(); i++)
        {
                ret = (GVFLink) vlink.get(i);
                if ( orig.equals(ret.getSourceNode().getSource())
                   && dest.equals(ret.getDestinationNode().getSource()))
                        return ret;
        }
        return ret;
    }

    private void setPosition(String label, String pos)
    {
        int k = pos.indexOf(",");
        String xs = pos.substring(1,k);
        String ys = pos.substring(k+1,pos.length()-1);
        int x = Integer.parseInt(xs);
        int y = Integer.parseInt(ys);
        GVFNode node = findLabel(label);
        if ( node != null )
        {
                node.moveTo(x,graphHeight - y);
        }
    }

    private void setLinkPosition(String l1, String l2, String pos)
    {
        GVFLink link = findLink(l1, l2);
        if ( link == null )
                return;
        pos = new String(pos);
        int k = pos.indexOf(",");
        while ( k >= 0 )
        {
                pos = pos.substring(k+1, pos.length());
                k = pos.indexOf(",");
                String xs = pos.substring(0,k);
                pos = pos.substring(k+1, pos.length());
                k = pos.indexOf(" ");
                if ( k < 0 ) k = pos.length()-1;
                String ys = pos.substring(0,k);
                pos = pos.substring(k, pos.length());
                int x = Integer.parseInt(xs);
                int y = Integer.parseInt(ys);
                k = pos.indexOf(",");
            if ( k >= 0 ) k = 0;
                link.addPoint(x, graphHeight-y);
        }

    }

        private void setBB(String pos)
        {
                int k = pos.lastIndexOf(",");
        String ys = pos.substring(k+1,pos.length()-1);
                graphHeight = Integer.parseInt(ys);
        }

        /* remove fim de linha de um string */
        private String removeFDL(String x)
        {
                StringBuffer sb = new StringBuffer(x);
                int k = sb.indexOf("\\",0);
                while ( k >= 0 && k < sb.length() - 1)
                {
                        if ( sb.charAt(k + 1) == '\n' ||
                             sb.charAt(k + 1) == '\r' )
                        {
                                sb.deleteCharAt(k);
                                sb.deleteCharAt(k);
                                if ( k < sb.length() && sb.charAt(k) == '\n' )
                                        sb.deleteCharAt(k);
                        }
                        k = sb.indexOf("\\",k+1);
                }
                return sb.toString();
        }

        static public void main(String[] args) throws Exception
        {
                new DotParser(null, null, new FileInputStream(args[0])).parse();
        }

  final public void parse() throws ParseException {
    jj_consume_token(DIGRAPH);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      switch (jj_nt.kind) {
      case GRAPH:
      case NODE:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
        ;
        break;
      default:
        break label_1;
      }
      switch (jj_nt.kind) {
      case GRAPH:
        graphDef();
        jj_consume_token(SEMICOLON);
        break;
      case NODE:
        jj_consume_token(NODE);
        atributeList();
        jj_consume_token(SEMICOLON);
        break;
      default:
        if (jj_2_1(2147483647)) {
          linkDef();
          jj_consume_token(SEMICOLON);
        } else {
          switch (jj_nt.kind) {
          case INTEGER_LITERAL:
          case STRING_LITERAL:
          case IDENTIFIER:
            nodeDef();
            jj_consume_token(SEMICOLON);
            break;
          default:
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    jj_consume_token(RBRACE);
  }

  final public void atributeList() throws ParseException {
    jj_consume_token(LBRACKET);
    switch (jj_nt.kind) {
    case IDENTIFIER:
      atribute();
      label_2:
      while (true) {
        switch (jj_nt.kind) {
        case COMMA:
          ;
          break;
        default:
          break label_2;
        }
        jj_consume_token(COMMA);
        atribute();
      }
      break;
    default:
      ;
    }
    jj_consume_token(RBRACKET);
  }

  final public void atribute() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUALS);
    switch (jj_nt.kind) {
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      break;
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void graphDef() throws ParseException {
String x = null;
    jj_consume_token(GRAPH);
    switch (jj_nt.kind) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      switch (jj_nt.kind) {
      case IDENTIFIER:
        atribute();
        break;
      case BBOX:
        x = boundingBox();
        break;
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch (jj_nt.kind) {
        case COMMA:
          ;
          break;
        default:
          break label_3;
        }
        jj_consume_token(COMMA);
        switch (jj_nt.kind) {
        case IDENTIFIER:
          atribute();
          break;
        case BBOX:
          x = boundingBox();
          break;
        default:
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACKET);
                setBB(x);
      break;
    default:
      ;
    }
  }

  final public void nodeDef() throws ParseException {
String x = null;
String l = null;
    l = label();
    switch (jj_nt.kind) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      switch (jj_nt.kind) {
      case IDENTIFIER:
        atribute();
        break;
      case POS:
        x = position();
        break;
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_4:
      while (true) {
        switch (jj_nt.kind) {
        case COMMA:
          ;
          break;
        default:
          break label_4;
        }
        jj_consume_token(COMMA);
        switch (jj_nt.kind) {
        case IDENTIFIER:
          atribute();
          break;
        case POS:
          x = position();
          break;
        default:
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACKET);
                setPosition(l,x);
      break;
    default:
      ;
    }
  }

  final public String position() throws ParseException {
        Token t = null;
    jj_consume_token(POS);
    jj_consume_token(EQUALS);
    t = jj_consume_token(STRING_LITERAL);
                                              {if (true) return removeFDL(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public String boundingBox() throws ParseException {
        Token t = null;
    jj_consume_token(BBOX);
    jj_consume_token(EQUALS);
    t = jj_consume_token(STRING_LITERAL);
                                               {if (true) return removeFDL(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public void linkDef() throws ParseException {
String t1 = null, t2 = null;
String x = null;
    t1 = label();
    jj_consume_token(TO);
    t2 = label();
    switch (jj_nt.kind) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      switch (jj_nt.kind) {
      case IDENTIFIER:
        atribute();
        break;
      case POS:
        x = position();
        break;
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        switch (jj_nt.kind) {
        case COMMA:
          ;
          break;
        default:
          break label_5;
        }
        jj_consume_token(COMMA);
        switch (jj_nt.kind) {
        case IDENTIFIER:
          atribute();
          break;
        case POS:
          x = position();
          break;
        default:
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACKET);
                setLinkPosition(t1, t2, x);
      break;
    default:
      ;
    }
  }

  final public String label() throws ParseException {
String l = null;
Token t = null;
    switch (jj_nt.kind) {
    case STRING_LITERAL:
      t = jj_consume_token(STRING_LITERAL);
                            l = t.image.substring(1,t.image.length()-1);
      break;
    case INTEGER_LITERAL:
    case IDENTIFIER:
      switch (jj_nt.kind) {
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
        break;
      case INTEGER_LITERAL:
        t = jj_consume_token(INTEGER_LITERAL);
        break;
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                       l = new String(t.image);
      label_6:
      while (true) {
        switch (jj_nt.kind) {
        case DOT:
          ;
          break;
        default:
          break label_6;
        }
        jj_consume_token(DOT);
        switch (jj_nt.kind) {
        case IDENTIFIER:
          t = jj_consume_token(IDENTIFIER);
          break;
        case INTEGER_LITERAL:
          t = jj_consume_token(INTEGER_LITERAL);
          break;
        default:
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                             l += "." + t.image;
      }
      break;
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return removeFDL(l);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_8()) {
    jj_scanpos = xsp;
    if (jj_3R_9()) return true;
    }
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_scan_token(DOT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) return true;
    }
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_7()) return true;
    if (jj_scan_token(TO)) return true;
    return false;
  }

  private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) return true;
    }
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_10()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_scan_token(STRING_LITERAL)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public DotParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;

  /** Constructor with InputStream. */
  public DotParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public DotParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new DotParserTokenManager(jj_input_stream);
    token = new Token();
    token.next = jj_nt = token_source.getNextToken();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    token.next = jj_nt = token_source.getNextToken();
  }

  /** Constructor. */
  public DotParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new DotParserTokenManager(jj_input_stream);
    token = new Token();
    token.next = jj_nt = token_source.getNextToken();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    token.next = jj_nt = token_source.getNextToken();
  }

  /** Constructor with generated Token Manager. */
  public DotParser(DotParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    token.next = jj_nt = token_source.getNextToken();
  }

  /** Reinitialise. */
  public void ReInit(DotParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    token.next = jj_nt = token_source.getNextToken();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken = token;
    if ((token = jj_nt).next != null) jj_nt = jj_nt.next;
    else jj_nt = jj_nt.next = token_source.getNextToken();
    if (token.kind == kind) {
      return token;
    }
    jj_nt = token;
    token = oldToken;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if ((token = jj_nt).next != null) jj_nt = jj_nt.next;
    else jj_nt = jj_nt.next = token_source.getNextToken();
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    Token errortok = token.next;
    int line = errortok.beginLine, column = errortok.beginColumn;
    String mess = (errortok.kind == 0) ? tokenImage[0] : errortok.image;
    return new ParseException("Parse error at line " + line + ", column " + column + ".  Encountered: " + mess);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
